# horizon

./: .gitignore  CMakeLists.txt  compile.sh
ressources/linux/: horizon.appdata.xml
ressources/linux/Flatpak/: com.github.carrotIndustries.Horizon.json  net.carrotIndustries.horizon.json
src/: CMakeLists.txt
src/auto-build/: CMakeLists.txt
src/imp/: CMakeLists.txt  imp_main.cpp
src/lib/: CMakeLists.txt
src/lib/board/: board_layers.hpp
src/lib/canvas/: .drag_selection.cpp.kate-swp  canvas.hpp  drag_selection.cpp  grid.cpp  marker.cpp  selectables.cpp  triangle.cpp
src/lib/canvas3d/: background.cpp  cover.cpp  face.cpp  wall.cpp
src/lib/core/: tool_add_part.cpp  tool_add_vertex.cpp  tool_assign_part.cpp  tool_bend_line_net.cpp  tool_delete.cpp  tool_draw_arc.cpp  tool_draw_dimension.cpp  tool_draw_line.cpp  tool_draw_line_net.cpp  tool_draw_line_rectangle.cpp  tool_draw_polygon.cpp  tool_draw_polygon_rectangle.cpp  tool_edit_board_hole.cpp  tool_edit_line_rectangle.cpp  tool_edit_pad_parameter_set.cpp  tool_edit_parameter_program.hpp  tool_edit_plane.cpp  tool_edit_shape.cpp  tool_edit_symbol_pin_names.cpp  (+28 more)
src/pgm-test/: CMakeLists.txt
src/pool-mgr/: CMakeLists.txt  entity_editor.cpp  part_editor.cpp  pool-mgr-app.cpp  pool-mgr-app_win.cpp  pool_merge_dialog.cpp  pool_remote_box.cpp  unit_editor.cpp
src/pool-update-parametric/: CMakeLists.txt  pool-update-parametric.cpp
src/pool-util/: CMakeLists.txt
src/prj-mgr/: CMakeLists.txt  pool_cache_window.cpp  prj-mgr-app.cpp  prj-mgr-app_win.cpp  prj-mgr-prefs.cpp
src/prj-util/: CMakeLists.txt
(+28 files in other folders)
